@@ -128,7 +128,7 @@
   (setq pulse-command-advice-flag t)    ; (if window-system 1 nil)
   (require 'pulse)
   (defadvice cua-exchange-point-and-mark (after pulse-advice activate)
-    (when (and (called-interactively-p) (> (abs (- (point) (mark))) 400))
+    (when (and (called-interactively-p 'interactive) (> (abs (- (point) (mark))) 400))
       (pulse-line-hook-function)))
   (defadvice switch-to-buffer (after pulse-advice activate)
     (pulse-line-hook-function))
@@ -139,7 +139,7 @@
   (defadvice ido-switch-buffer (after pulse-advice activate)
     (pulse-line-hook-function))
   (defadvice beginning-of-buffer (after pulse-advice activate)
-    (when (called-interactively-p) (pulse-line-hook-function)))
+    (when (called-interactively-p 'interactive) (pulse-line-hook-function)))
 ;;   (defmacro cedet-advise-commands (class advice-name commands &rest body)
 ;;     "Apply advice named ADVICE-NAME to multiple COMMANDS.
 ;; The body of the advice is in BODY."
@@ -176,19 +176,19 @@ the mru bookmark stack."
       ad-do-it)
 
     (defadvice goto-line (after pulse-advice activate)
-      (when (called-interactively-p) (pulse-line-hook-function)))
+      (when (called-interactively-p 'interactive) (pulse-line-hook-function)))
     (defadvice find-tag (after pulse-advice activate)
-      (when (called-interactively-p) (pulse-line-hook-function)))
+      (when (called-interactively-p 'interactive) (pulse-line-hook-function)))
     (defadvice tags-search (after pulse-advice activate)
-      (when (called-interactively-p) (pulse-line-hook-function)))
+      (when (called-interactively-p 'interactive) (pulse-line-hook-function)))
     (defadvice tags-loop-continue (after pulse-advice activate)
-      (when (called-interactively-p) (pulse-line-hook-function)))
+      (when (called-interactively-p 'interactive) (pulse-line-hook-function)))
     (defadvice pop-tag-mark (after pulse-advice activate)
-      (when (called-interactively-p) (pulse-line-hook-function)))
+      (when (called-interactively-p 'interactive) (pulse-line-hook-function)))
     (defadvice imenu-default-goto-function (after pulse-advice activate)
-      (when (called-interactively-p) (pulse-line-hook-function)))
+      (when (called-interactively-p 'interactive) (pulse-line-hook-function)))
     (defadvice exchange-point-and-mark (after pulse-advice activate)
-      (when (and (called-interactively-p) (> (abs (- (point) (mark))) 400))
+      (when (and (called-interactively-p 'interactive) (> (abs (- (point) (mark))) 400))
         (pulse-line-hook-function)))
     (add-hook 'next-error-hook 'pulse-line-hook-function)))
 
